# hackthe6ix2025

./: .gitignore  beatmap.py  bodypose3d.py  bodypose3dLive.py  bodypose3d_udp.py  calib.py  calibration_settings.yaml  calicommunicate.py  death_piano.osu  death_piano_easy.osu  main.py  opencv.py  pyproject.toml  rasp_camera.c  requirements.txt  show_3d_pose.py  temp.py  utils.py
piclient/: pose_detection.py
