[project]
name = "hackthe6ix2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.1",
    "matplotlib>=3.10.3",
    "mediapipe>=0.10.14",
    "opencv-python>=4.12.0.88",
    "pygame>=2.6.1",
    "pyyaml>=6.0.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]
